Deleted node_modules: access through npm install

--- a/Restaurant Website/index.html
+++ b/Restaurant Website/index.html
@@ -40,7 +40,13 @@
                     <p>Pancit Canton</p>
                 </div>
             </div>
-            <div class="card-list">test</div>
+            <div class="card-list">
+                <div class="card">
+                    <p>Dish 1</p>
+                    <img src="./dish1.png">
+                    <h3>porta eu mi sed</h3>
+                </div>
+            </div>
         </div>
         </div>
     </div>
