Created JS DOM Generate for each nav buttons

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Kderya Restaurant</title>
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    <div id="container">
-    </div>
 </body>
 </html>
 <!-- NavBar
     <div class="nav-bar">
-        <ul>
+        <ul>S
             <li class="home">Home</li>
             <li class="menu">Menu</li>
             <li class="about-us">About Us</li>
@@ -47,7 +46,6 @@
                         <h2>Adobo</h2>
                         <p>Nam lectus velit, porta eu mi sed, consectetur tincidunt sem. Morbi ut sodales eros. Curabitur sed posuere arcu.</p>
                     </div>
-                    
                 </div>
                 <div class="m-dish-container">
                     <img class="m-dish" src="./dish3.png">
